# fekt-mpg

./: .gitignore  01_deCasteljau.cpp  01_prekryvani.cpp  01_texturovani.cpp  02_mipmap.cpp  02_osvetleni.cpp  02_subdivision.cpp  03_BezieruvPlat.cpp  03_blending.cpp  03_normaly.cpp  04_text_vs_light.cpp  231284.cpp  CMakeLists.txt  CODESTYLE.md  README.md  TASK.md  cv10_2026.txt  cv11.txt  cv1_zadani.cpp  cv2_zadani.cpp  cv3_2026.txt  cv3_zadani.cpp  cv4_2026.txt  cv4_zadani.cpp  cv5_2026.txt  cv6.cpp  cv6_2026.txt  cv6_zadani.cpp  cv8_2026.txt  cv9_2026.txt  imageLoad.h  mylocalheader.h  simpleMesh.h  ukol1.cpp  ukol2.cpp  zadani.cpp
